--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@remix-run/react": "^2.9.1",
     "@remix-run/serve": "^2.9.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.3",
     "form-data": "^4.0.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.6.0",
     "remix-auth-form": "^1.5.0",
